--- a/tsconfig.json
+++ b/tsconfig.json
@@ -66,7 +66,7 @@
     "skipLibCheck": true,                     /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
   },
-  "include": ["src/**/*"],
+  "include": ["source/**/*"],
   "exclude": [
     "node_modules/*"
   ]
