--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "devDependencies": {
     "babel-loader": "^8.1.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.1.4",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   },
